# kolas

develop/Source/공통/PaintLib/: ChangeLog  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  configure  configure.in  paintlib-config.in
develop/Source/공통/PaintLib/common/: Makefile.am  Makefile.in  config.h  config.h.in  config.vc  jmemdest.cpp  jmemdest.h  jmemsrc.cpp  jmemsrc.h  planybmp.cpp  planybmp.h  planydec.cpp  planydec.h  plbitmap.cpp  plbitmap.h  plbmpdec.cpp  plbmpdec.h  plbmpenc.cpp  plbmpenc.h  plbmpinfo.cpp  plbmpinfo.h  pldatasink.cpp  pldatasink.h  pldatasrc.cpp  pldatasrc.h  pldebug.h  plexcept.cpp  plexcept.h  plfilesink.cpp  plfilesink.h  plfilesrc.cpp  plfilesrc.h  plgifdec.cpp  plgifdec.h  pljpegdec.cpp  pljpegdec.h  pljpegenc.cpp  pljpegenc.h  plmemsink.cpp  plmemsink.h  (+52 more)
develop/Source/공통/PaintLib/common/Filter/: Makefile.am  Makefile.in  pl2passscale.h  plcontribdefs.h  plfilter.cpp  plfilter.h  plfiltercontrast.cpp  plfiltercontrast.h  plfiltercrop.cpp  plfiltercrop.h  plfilterfill.cpp  plfilterfill.h  plfilterfillrect.h  plfilterflip.cpp  plfilterflip.h  plfiltergetalpha.cpp  plfiltergetalpha.h  plfiltergrayscale.cpp  plfiltergrayscale.h  plfilterintensity.cpp  plfilterintensity.h  plfilterlightness.cpp  plfilterlightness.h  plfiltermirror.cpp  plfiltermirror.h  plfilterpixel.h  plfilterquantize.cpp  plfilterquantize.h  plfilterresize.cpp  plfilterresize.h  plfilterresizebilinear.cpp  plfilterresizebilinear.h  plfilterresizebox.cpp  plfilterresizebox.h  plfilterresizegaussian.cpp  plfilterresizegaussian.h  plfilterresizehamming.cpp  plfilterresizehamming.h  plfilterthreshold.cpp  plfilterthreshold.h  (+4 more)
develop/Source/공통/PaintLib/common/test/: Makefile.am  Makefile.in  pltest.cpp  pltest.h  pltestdecoders.cpp  pltestdecoders.h  pltester.cpp  pltester.h  pltestfilters.cpp  pltestfilters.h  testfilterresizebilinear.cpp  testfilterresizebilinear.h  testpaintlib.cpp  testpsddecoder.cpp  testpsddecoder.h
develop/Source/공통/PaintLib/config/: config.guess  config.sub  ltmain.sh  mkinstalldirs
develop/Source/공통/PaintLib/doc/: content.html  contrib.html  copyright.html  cppfeatures.html  cppinstall.html  cppinternals.html  cppreference.html  cpptutorial.html  download.html  feedback.html  index.html  intro.html  links.html  paintx.html
develop/Source/공통/PaintLib/gnu/: Makefile.am  Makefile.in
develop/Source/공통/PaintLib/gnu/im2bmp/: Makefile.am  Makefile.in  im2bmp.cpp  im2bmp.h
develop/Source/공통/PaintLib/gnu/im2jpeg/: Makefile.am  Makefile.in  im2jpeg.cpp  im2jpeg.h
develop/Source/공통/PaintLib/gnu/im2png/: Makefile.am  Makefile.in  im2png.cpp  im2png.h
develop/Source/공통/PaintLib/gnu/im2tiff/: Makefile.am  Makefile.in  im2tiff.cpp  im2tiff.h
develop/Source/공통/PaintLib/lib/: Makefile.am  Makefile.in  paintlib_version.h.in  version.cpp
develop/Source/공통/PaintLib/lib/Release/: libjpeg.lib
develop/Source/공통/PaintLib/otherlib/libjpeg/: apps1.dsp  apps1.dsw  cderror.h  cdjpeg.h  jchuff.h  jcmarker.c  jconfig.h  jdct.h  jdhuff.h  jerror.h  jinclude.h  jmemmgr.c  jmemsys.h  jmorecfg.h  jpeg.lib  jpeg1.dsp  jpeg1.dsw  jpegint.h  jpeglib.h  jversion.h  libjpeg.lib  transupp.h  wrjpgcom.c
develop/Source/공통/PaintLib/otherlib/libjpeg/Release/: jpeg.lib
develop/Source/공통/PaintLib/win/PaintX/: ComPicDecoder.cpp  ComPicDecoder.h  PaintX.cpp  PaintX.def  PaintX.dsp  PaintX.dsw  PaintX.h  PaintX.idl  PaintX.rc  PaintX.vcproj  PaintX_i.c  PaintX_p.c  PictureDecoder.cpp  PictureDecoder.h  PictureDecoder.rgs  StdAfx.cpp  StdAfx.h  dlldata.c  resource.h
develop/Source/공통/PaintLib/win/PaintX/ExcelTest/: PaintX.xls
develop/Source/공통/PaintLib/win/TIFFEX/: TIFFEX.CPP  TIFFEX.DSP  TIFFEX.DSW  tiffex.vcproj
develop/Source/공통/PaintLib/win/VBPaintX/: VBPAINTX.frm  VBPaintX.RES  VBPaintX.vbp  VBPaintX.vbw
develop/Source/공통/PaintLib/win/VCPaintX/: StdAfx.cpp  StdAfx.h  VCPaintXDemo.cpp  VCPaintXDemo.dsp  VCPaintXDemo.dsw  VCPaintXDemo.h  VCPaintXDemo.rc  VCPaintXDemo.vcproj  VCPaintXDemoDlg.cpp  VCPaintXDemoDlg.h  image.cpp  image.h  picture.h  resource.h
develop/Source/공통/PaintLib/win/VCPaintX/res/: VCPaintXDemo.rc2
develop/Source/공통/PaintLib/win/libjpeg/: jmorecfg.h  libjpeg.dsp  libjpeg.vcproj
develop/Source/공통/PaintLib/win/libpng/: libpng.dsp  libpng.vcproj
develop/Source/공통/PaintLib/win/libtiff/: fax3sm.c  libtiff.def  libtiff.dsp  libtiff.vcproj  port.h  version.h
develop/Source/공통/PaintLib/win/libungif/: libungif.dsp  libungif.vcproj
develop/Source/공통/PaintLib/win/paintlib/: paintlib.dsp  paintlib.dsw  paintlib.mak  paintlib.sln  paintlib.vcproj  plStreamSink.cpp  plStreamSink.h  plddhelper.cpp  plddhelper.h  plddrawbmp.cpp  plddrawbmp.h  pldibsect.cpp  pldibsect.h  plressrc.cpp  plressrc.h  plwemfdec.cpp  plwemfdec.h  plwinbmp.cpp  plwinbmp.h
develop/Source/공통/PaintLib/win/piclook/: ContrastDlg.cpp  ContrastDlg.h  CropFilterDlg.cpp  CropFilterDlg.h  DibCtl.cpp  DibCtl.h  DitherDialog.cpp  DitherDialog.h  Doc.cpp  Doc.h  DocMan.cpp  DocMan.h  FilterDialog.cpp  FilterDialog.h  IntensityDlg.cpp  IntensityDlg.h  LightnessDlg.cpp  LightnessDlg.h  MainFrm.cpp  MainFrm.h  PalViewDlg.cpp  PalViewDlg.h  PicLook.cpp  PicLook.dsp  PicLook.dsw  PicLook.h  PicLook.rc  PicLook.vcproj  PreView.cpp  PreView.h  Readme.htm  Resource.h  StdAfx.cpp  StdAfx.h  ThresholdDlg.cpp  ThresholdDlg.h  View.cpp  View.h  WinBmpEx.cpp  WinBmpEx.h  (+2 more)
develop/Source/공통/PaintLib/win/piclook/res/: PicLook.rc2  cur00001.cur  cursor2.cur
develop/Source/공통/PaintLib/win/test/: resource.h  test.dsp  test.rc  test.vcproj
develop/Source/공통/PaintLib/win/testdec/: dibwnd.cpp  dibwnd.h  maindlg.cpp  maindlg.h  mtdibwnd.cpp  mtdibwnd.h  resource.h  stdafx.cpp  stdafx.h  testdec.cpp  testdec.dsp  testdec.h  testdec.rc  testdec.vcproj
develop/Source/공통/PaintLib/win/testdib/: StdAfx.h  dibgrit.cpp  dibgrit.h  dibwnd.cpp  dibwnd.h  drawhelp.cpp  drawhelp.h  grarray.cpp  grarray.h  gritem.cpp  gritem.h  maindlg.cpp  maindlg.h  mtdibwnd.cpp  mtdibwnd.h  read.me  resource.h  shadow.cpp  shadow.h  stdafx.cpp  testdib.cpp  testdib.dsp  testdib.h  testdib.mak  testdib.rc  testdib.vcproj
(+18550 files in other folders)
